<resources>
    <string name="app_name">Discount Mart</string>
    <string name="appbar_title">Discount Mart</string>
    <string name="rs_symbol">\u20B9</string>
    <string name="rs_text">\u20A8</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="multiplied_expanding">Multiplied expanding</string>
    <string name="always_expanded">Always expanded</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>
    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="initial_network_message">Please check the network state as application require working internet connection</string>
    <string name="vendor_id_mismatch_in_cart">Please select products from single Vendor.</string>
    <string name="ok_capitalize">Ok</string>
    <string name="dialog_number_confirmation_message">Is this your correct number? \n\nIt would be verified by sending the confirmation code to this number</string>
    <string name="toast_number_error">Please enter a valid mobile number</string>
    <string name="txv_mobile_number">Enter your Mobile No.</string>
    <string name="network_error">Device is out of network coverage</string>
    <string name="some_error">Some error occurred, please try again later</string>
    <string name="server_error">Server error occurred, please try again later</string>
    <string name="location_settings">Location Settings</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_cancel">Cancel</string>
    <string name="location_disabled">Device Location is not enabled. Do you want to go to settings menu?</string>
    <string name="select_recipients">Select Recipients</string>
    <string name="qr_code_steps">1.Take  a screenshot. \n2.Takeout a print of this Qr Code. \n3.Paste at it your shop counter. \n4.Ask your customer to scan it from their app. \n5.Customer will be redirected to your offer page directly.</string>
    <string name="rank_reward_note">*Minimum Group Growth 30% counted on both side for monthly incentive.</string>
    <string name="str_home">Home</string>
    <string name="str_transaction">Transaction</string>
    <string name="str_news">News</string>
    <string name="news_event">News &amp; Event</string>
    <string name="str_view_detail">View Detail</string>
    <string name="dash_detail">Dashboard Detail</string>
    <string name="today_regis">Today Registration</string>
    <string name="today_bv">Today BV</string>
    <string name="total_regis">Total Registration</string>
    <string name="today_activation">Today Activation</string>
    <string name="total_activation">Total Activation</string>
    <string name="total_direct_active">Total Direct Active</string>
    <string name="total_fv">Total FV</string>
    <string name="total_bv">Total BV</string>
    <string name="total_income">Total Income</string>
    <string name="total_direct_fv">Total Direct FV</string>
    <string name="total_direct_bv">Total Direct BV</string>
    <string name="total_reward_point">Total Reward Point</string>
    <string name="my_team_detail">My Team Details</string>
    <string name="top_seller">Top Seller</string>
    <string name="kyc_detail">KYC Details</string>
    <string name="my_generation_detail">MY Generation Details</string>
    <string name="my_profile_detail">MY Profile Details</string>
    <string name="browser">Browser</string>
    <string name="login_time">Login Time</string>
    <string name="till_last_month">Last Month</string>
    <string name="last_month">Last Month</string>
    <string name="current_month">Current Month</string>
    <string name="accumulate">Accumulated</string>
    <string name="self_pv">Self PV</string>
    <string name="self_rv">Self RV</string>
    <string name="group_rv">Group RV</string>
    <string name="group_pv">Group PV</string>
    <string name="total_pv">Total PV</string>
    <string name="total_rv">Total RV</string>
    <string name="address_status">Address Status</string>
    <string name="bank_status">Bank Status</string>
    <string name="pan_status">Pan Status</string>
    <string name="address_verify_status">Address Verify Status</string>
    <string name="bank_verify_status">Bank Verify Status</string>
    <string name="pan_verify_status">Pan Verify Status</string>
    <string name="address_verify_date">Address Verify Date</string>
    <string name="address_proof">Address Proof</string>
    <string name="bank_proof">Bank Proof</string>
    <string name="pan_card">Pan Card</string>
    <string name="pan_verify_date">Pan Verify Date</string>
    <string name="reward_limit">Reward(Time Limit)</string>
    <string name="reward_nolimit">Reward(Time No Limit)</string>
    <string name="remaining_day">Remaining Days</string>
    <string name="login_history">Login History</string>
    <string name="myacive_direct">My Active Directs</string>
    <string name="my_invoice">My Invoice</string>
    <string name="team_purchase">Team Purchase</string>
    <string name="select_any">Select Any One</string>
    <string name="particular">Particular</string>
    <string name="str_credit">Credit</string>
    <string name="str_debit">Debit</string>
    <string name="str_balance">Balance</string>
    <string name="str_wallet_summary">Wallet Summary</string>
    <string name="str_login">Login</string>
    <string name="str_username">User Name</string>
    <string name="username">User Name*</string>
    <string name="str_user_id">User Id*</string>
    <string name="str_user_pass">Password*</string>
    <string name="str_pass">Password*</string>
    <string name="str_pass_trans">Transaction Password*</string>
    <string name="str_pass_confirm">Confirm Password*</string>
    <string name="str_remmber_me">Remember Me</string>
    <string name="str_forgot_pass">Forgot Password?</string>
    <string name="str_registration">New Registration</string>
    <string name="new_registration">New Registration ?</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="change_pass">Change Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="str_dob_joining">Date of Joining</string>
    <string name="str_dob_active">Date of Activation</string>
    <string name="title_placement_detail">Your Placement Detail.</string>
    <string name="str_position">Position</string>
    <string name="str_head_register">Register</string>
    <string name="str_sponser_detail">Sponsor Detail</string>
    <string name="str_sponserid">Sponsor ID</string>
    <string name="str_sponser_pass">Sponsor Password</string>
    <string name="str_sponser_nme">Sponsor Name</string>
    <string name="str_click_here_for">Click here for Sponsor Name</string>
    <string name="str_click_here">Click here for Distributor Name</string>
    <string name="str_personal_detail">Personal Detail</string>
    <string name="str_contact_detail">Contact Detail</string>
    <string name="father_name">Father Name</string>
    <string name="str_legs">Legs</string>
    <string name="str_side">Side</string>
    <string name="str_name">Name</string>
    <string name="str_marital_status">Marital Status</string>
    <string name="str_fath_hus">Father/Husband Name</string>
    <string name="str_qulify">Qualification</string>
    <string name="str_married">Married</string>
    <string name="str_unmarried">UnMarried</string>
    <string name="str_dob">DOB</string>
    <string name="str_married_date">Married Date</string>
    <string name="str_next">Next >></string>
    <string name="str_address">Address</string>
    <string name="str_area">Area</string>
    <string name="str_pin">Pincode</string>
    <string name="str_district">District</string>
    <string name="str_state">State</string>
    <string name="str_country">Country</string>
    <string name="str_city">City</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="select_state">Select State</string>
    <string name="district">District</string>
    <string name="str_mobile">Mobile No</string>
    <string name="str_phone">Phone No</string>
    <string name="str_email">Email Id</string>
    <string name="str_nomine_detail">Nominee Detail.</string>
    <string name="str_nomine">Nominee Detail</string>
    <string name="str_nomine_nme">Nominee Name</string>
    <string name="str_nomine_age">Nominee Age</string>
    <string name="str_nomine_dob">Nominee DOB</string>
    <string name="str_nomine_mobile">Nominee Mobile No.</string>
    <string name="str_relation">Relation</string>
    <string name="str_conf_pass">Confirm Password</string>
    <string name="conf_mobile">Confirm Mobile No.</string>
    <string name="str_trans_pass">Transaction Password</string>
    <string name="str_agree">I Agree With</string>
    <string name="str_term_cond"><u>Term &amp; Condition</u></string>
    <string name="Home">Home</string>
    <string name="Share_App">Share App</string>
    <string name="Logout">Logout</string>
    <string name="str_business_dashboard">Business</string>
    <string name="str_profile">Profile</string>
    <string name="str_share_app">Share</string>
    <string name="str_complaints">Complaint</string>
    <string name="str_logout">Logout</string>
    <string name="str_cancel_time">Cancel Time</string>
    <string name="str_cancel_charge">Cancel Charges</string>
    <string name="str_refundable">Only refundable flights</string>
    <string name="str_stop">Stops</string>
    <string name="str_non_stop_flight">Non-stop flight only</string>
    <string name="str_max_1stop_flight">Max 1 stop flight only</string>
    <string name="str_all_flight">All flight </string>
    <string name="str_flight_class">Flight Class</string>
    <string name="str_economy">Economy</string>
    <string name="str_business">Business</string>
    <string name="str_first">First</string>
    <string name="str_airlines">Airlines</string>
    <string name="str_departure_time">Departure Time</string>
    <string name="str_before_11am">Before 11.00Am</string>
    <string name="str_after_noon_11to5pm">Afternoon(11:00AM - 5.00PM)</string>
    <string name="str_evening_5to9pm">Evening(5:00PM - 9.00PM)</string>
    <string name="str_after_9pm">After(9.00PM)</string>
    <string name="str_cancel_policy">Cancellation Policy</string>
    <string name="support">Support</string>
    <string name="str_policy">Policies</string>
    <string name="action_myaccount">My Account</string>
    <string name="action_home">Home</string>
    <string name="home_string">Home</string>
    <string name="myaccount_string">My Account</string>
    <string name="setting">Account Settings</string>
    <string name="aboutus">About us</string>
    <string name="store">Stores</string>
    <string name="tnc_string">Terms and Condition</string>
    <string name="faq_string">FAQ</string>
    <string name="rateapp_string">Rate App</string>
    <string name="shareapp_string">Share App</string>
    <string name="refer_string">Refer and Earn</string>
    <string name="howitworks_string">How App Works</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout_string">Logout</string>
    <string name="login_string">Login</string>
</resources>