<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_bottom_nav_action_home"
        android:icon="@drawable/ic_action_home"
        android:title="@string/Home"
        app:showAsAction="ifRoom|withText"/>


    <item
        android:id="@+id/main_bottom_nav_action_share"
        android:icon="@drawable/bus_ic_footer_share"
        android:title="@string/Share_App"
        android:visible="true"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/main_bottom_nav_action_support"
        android:icon="@drawable/bus_ic_footer_support"
        android:title="@string/support"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/main_bottom_nav_action_logout"
        android:icon="@drawable/ic_logout_white"
        android:title="@string/Logout"
        android:visible="true"/>

    <item
        android:id="@+id/main_bottom_nav_action_policy"
        android:icon="@drawable/bus_ic_footer_support"
        android:title="@string/str_policy"
        app:showAsAction="ifRoom|withText"/>
</menu>