<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="in.discountmart.utility_services.travel.flight.flight_activity.FlightFilterActivity">

    <!--All Content Layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="70dp"
        android:orientation="vertical">

        <!--Layout for non refundable flight-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_normal"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:text="@string/str_refundable"
                android:textSize="@dimen/txt_size_large"/>
            <CheckBox
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/flight_filter_act_chekbox_nonrefund"
                />
        </LinearLayout>

        <!--Vertical line-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/margin_normal"
            android:background="@color/gray"/>

        <!--Layout for stop flight-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_stop"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_medium"
                android:textSize="@dimen/txt_size_large"/>

            <!--Radio Group Flight stops-->
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:id="@+id/flight_filter_rdg_stop"
                android:orientation="vertical">

                <!--Non stop flight-->
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_non_stop_flight"
                    android:textSize="@dimen/txt_size_normal"
                    android:paddingLeft="@dimen/txt_size_medium"
                    android:id="@+id/flight_filter_rdb_non_stop"/>

                <!--Max i stop flight-->
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_max_1stop_flight"
                    android:textSize="@dimen/txt_size_normal"
                    android:paddingLeft="@dimen/txt_size_medium"
                    android:id="@+id/flight_filter_rdb_1stop"/>

                <!--All flight-->
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_all_flight"
                    android:paddingLeft="@dimen/txt_size_medium"
                    android:textSize="@dimen/txt_size_normal"
                    android:checked="true"
                    android:id="@+id/flight_filter_rdb_all"/>
            </RadioGroup>

        </LinearLayout>

        <!--Vertical line-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginLeft="@dimen/margin_normal"
            android:background="@color/gray"/>

        <!--Layout for departure time according flight-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_x_large"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_departure_time"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_medium"
                android:textSize="@dimen/txt_size_large"/>

            <!--Radio Group Flight stops-->
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:id="@+id/flight_filter_rdg_departure_time"
                android:orientation="vertical">

                <!--Before 11.00Am flight-->
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_before_11am"
                    android:textSize="@dimen/txt_size_normal"
                    android:paddingLeft="@dimen/txt_size_medium"
                    android:id="@+id/flight_filter_rdb_berore11am"/>

                <!--After noon (11 to 5pm) flight-->
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_after_noon_11to5pm"
                    android:textSize="@dimen/txt_size_normal"
                    android:paddingLeft="@dimen/txt_size_medium"
                    android:id="@+id/flight_filter_rdb_afternoon"/>

                <!--Evening (5 to 9pm) flight-->
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_evening_5to9pm"
                    android:paddingLeft="@dimen/txt_size_medium"
                    android:textSize="@dimen/txt_size_normal"
                    android:id="@+id/flight_filter_rdb_evening5to9"/>

                <!--After (9pm) flight-->
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_after_9pm"
                    android:paddingLeft="@dimen/txt_size_medium"
                    android:textSize="@dimen/txt_size_normal"
                    android:id="@+id/flight_filter_rdb_after9pm"/>
            </RadioGroup>

        </LinearLayout>

        <!--Vertical line-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginLeft="@dimen/margin_normal"
            android:background="@color/gray"/>

        <!--Layout flight class-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_x_large"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_flight_class"
                android:layout_marginLeft="@dimen/margin_medium"
                android:textSize="@dimen/txt_size_large"/>

            <!--Radio Group Flight Airlines-->
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:id="@+id/flight_filter_rdg_class"
                android:orientation="vertical">

                <!--first class flight-->
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_first"
                    android:textSize="@dimen/txt_size_normal"
                    android:paddingLeft="@dimen/txt_size_medium"
                    android:id="@+id/flight_filter_rdb_first"/>

                <!--busness class flight-->
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_business"
                    android:textSize="@dimen/txt_size_normal"
                    android:paddingLeft="@dimen/txt_size_medium"
                    android:id="@+id/flight_filter_rdb_business"/>

                <!--economy class flight-->
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_economy"
                    android:paddingLeft="@dimen/txt_size_medium"
                    android:textSize="@dimen/txt_size_normal"
                    android:id="@+id/flight_filter_rdb_economy"/>

            </RadioGroup>

        </LinearLayout>

        <!--Vertical line-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginLeft="@dimen/margin_normal"
            android:background="@color/gray"/>

        <!--Layout for flight airlines-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/txt_size_large"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_airlines"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_medium"
                android:textSize="@dimen/txt_size_large"/>

            <!--Add Dynemic check box-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:id="@+id/flight_filter_act_layout_airlines">
            </LinearLayout>




        </LinearLayout>


    </LinearLayout>



</androidx.core.widget.NestedScrollView>