<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#cf000000"
    android:weightSum="2"
    tools:context=".travel.bus.bus_activity.BusCancellationPolicyActivity">

    <!--Layout header trasparent-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:orientation="horizontal"
        android:gravity="center|bottom"
        android:id="@+id/bus_cancel_policy_act_layout_header">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_cancel_policy"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/margin_large"
            android:textSize="@dimen/txt_size_large"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:background="@drawable/layout_bg_white">

        <!--Layout for Title text-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:padding="@dimen/margin_small"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center|left"
                android:text="@string/str_cancel_charge"
                android:textColor="@color/black"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:gravity="center|left"
                android:textColor="@color/black"
                android:text="@string/str_cancel_time"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!--Line-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_v_small"
            android:background="@color/black"/>

        <!--Recycler for list-->
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:id="@+id/bus_cancel_policy_act_act_recycler_list">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>


</LinearLayout>